fixed misaligned navbar "X"

--- a/style.css
+++ b/style.css
@@ -704,3 +704,12 @@ html {
   pointer-events: none;
   opacity: 0.7;
 }
+
+.nav-toggle span {
+  transform-origin: center;
+}
+
+.nav-toggle:not(.active) span:nth-child(1),
+.nav-toggle:not(.active) span:nth-child(3) {
+  transform: rotate(0) translate(0, 0);
+}
